objects/Account_item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Items</relationshipLabel>
        <relationshipName>Account_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <displayFormat>AI-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{0000000}</displayFormat>
        <label>Account item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>